# cosmix

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  _notes.md
_bin/: appkill  calc  clipnotify  cliptransform  daemon-demo  demo  displays  launcher  playerctl  powermenu  quicknote  screenshot  sysinfo  timer  volume  winmove  winpick
_doc/: 2026-03-26-amp-file-services-architecture.md  2026-03-26-dioxus-responsive-layouts.md  2026-03-27-alternate-compositors.md  2026-03-28-wayland-always-on-top.md
_journal/: 2026-03-08.md  2026-03-10.md  2026-03-13.md  2026-03-14.md  2026-03-15.md  2026-03-19.md  2026-03-20.md  2026-03-26-appmesh-phase3.md  2026-03-26.md  2026-03-27.md  2026-03-28-datatable-scripting-arexx.md  2026-03-28.md
_man/: cosmix-scripts.7.md  cosmix.1.md
cosmic/: overrides.toml  patch.sh
crates/cosmix-calc/: Cargo.toml
crates/cosmix-calc/src/: main.rs
crates/cosmix-client/: Cargo.toml
crates/cosmix-client/src/: native.rs  types.rs  web.rs
crates/cosmix-config/: Cargo.toml
crates/cosmix-config/src/: lib.rs  settings.rs  store.rs
crates/cosmix-configd/: Cargo.toml
crates/cosmix-configd/src/: main.rs
crates/cosmix-daemon/: Cargo.toml
crates/cosmix-daemon/src/: cosmic_config.rs  desktop.rs  dialog.rs  fmt.rs  http.rs  lib.rs  mail.rs  main.rs  pipewire.rs  sqlite.rs
crates/cosmix-daemon/src/daemon/: cliplist.rs  config.rs  events.rs  mod.rs  queues.rs  registry.rs  scripts.rs  state.rs
crates/cosmix-daemon/src/dbus/: clipboard.rs  generic.rs  mod.rs  notify.rs
crates/cosmix-daemon/src/ipc/: mod.rs  protocol.rs
crates/cosmix-daemon/src/lua/: events.rs  mod.rs  ports.rs
crates/cosmix-daemon/src/mesh/: connection.rs  mod.rs  peers.rs  router.rs
crates/cosmix-daemon/src/wayland/: mod.rs  screenshot.rs  toplevel.rs  virtual_keyboard.rs  workspace.rs
crates/cosmix-dns/ui/: Cargo.toml
crates/cosmix-dns/ui/src/: main.rs
crates/cosmix-dns/util/: Cargo.toml
crates/cosmix-embed/: Cargo.toml
crates/cosmix-embed/src/: main.rs
crates/cosmix-hubd/: Cargo.toml  mesh.toml.example
crates/cosmix-hubd/src/: main.rs
crates/cosmix-jmap/: Cargo.toml
crates/cosmix-jmap/src/: config.rs  main.rs
crates/cosmix-jmap/src/auth/: basic.rs
crates/cosmix-jmap/src/db/: account.rs  calendar.rs  contact.rs  email.rs  thread.rs
crates/cosmix-jmap/src/jmap/: calendar.rs  contact.rs  email.rs  mod.rs  thread.rs  vacation.rs
crates/cosmix-jmap/src/smtp/: delivery.rs  inbound.rs  mod.rs  session.rs
crates/cosmix-launcher/: Cargo.toml
crates/cosmix-launcher/src/: main.rs
crates/cosmix-lib-amp/: Cargo.toml
crates/cosmix-lib-amp/src/: amp.rs  lib.rs
crates/cosmix-lib-config/: Cargo.toml
crates/cosmix-lib-config/src/: settings.rs
crates/cosmix-mail/: Cargo.toml  Dioxus.toml  index.html
crates/cosmix-mail/src/: config.rs  hub.rs  jmap.rs  main.rs  tree_view.rs
crates/cosmix-mail/src/components/: compose.rs  email_view.rs  mailbox_list.rs
crates/cosmix-mail/static/: sw.js
crates/cosmix-mond/: Cargo.toml
crates/cosmix-mond/src/: main.rs
crates/cosmix-port/: Cargo.toml
crates/cosmix-port/src/: amp.rs  lib.rs  native_port.rs
crates/cosmix-portd/: Cargo.toml
crates/cosmix-portd/src/: main.rs
crates/cosmix-scripts/: Cargo.toml
crates/cosmix-scripts/src/: main.rs
crates/cosmix-toot/: Cargo.toml
crates/cosmix-toot/i18n/bg/: cosmix_toot.ftl
crates/cosmix-toot/i18n/en/: cosmix_toot.ftl
crates/cosmix-toot/i18n/nl/: cosmix_toot.ftl
crates/cosmix-toot/i18n/pl/: cosmix_toot.ftl
crates/cosmix-toot/i18n/sv/: cosmix_toot.ftl
crates/cosmix-toot/res/: app.desktop
crates/cosmix-toot/src/: app.rs  config.rs  error.rs  main.rs  pages.rs  port.rs  settings.rs  subscriptions.rs  utils.rs
crates/cosmix-toot/src/pages/: home.rs  notifications.rs  public.rs
crates/cosmix-toot/src/subscriptions/: home.rs  notifications.rs  public.rs
crates/cosmix-toot/src/widgets/: account.rs  mod.rs  notification.rs  status.rs
crates/cosmix-ui/: Cargo.toml
crates/cosmix-ui/src/: lib.rs
crates/cosmix-ui/src/menu/: component.rs  mod.rs  shortcuts.rs  types.rs
crates/cosmix-view/: Cargo.toml
crates/cosmix-view/src/: main.rs  markdown.rs
crates/cosmix-web/: Cargo.toml
crates/cosmix-web/src/: config.rs  db.rs  ipc.rs  main.rs
crates/cosmix-web/src/routes/: api.rs  auth.rs  chat.rs  mail.rs  mod.rs  pages.rs  panels.rs  settings.rs
crates/cosmix-web/src/templates/: index.html
crates/cosmix-web/src/templates/pages/: chat.html  login.html  mail.html  settings.html
crates/cosmix-web/src/templates/panels/: conversations.html  mailboxes.html  mesh.html  nav.html  theme.html
crates/cosmix-web/static/: app.css  app.js  base.css  base.js
scripts/: build-alpine.sh  build-image.sh  build-musl.sh  cosmixos-setup.sh  deploy.sh  mesh-destroy.sh  migrate-ns3.sh  test_phase3.lua  test_phase4.lua
src/: Cargo.toml  _notes.md
src/crates/cosmix-configd/: Cargo.toml
src/crates/cosmix-dialog/: Cargo.toml  build.rs  tailwind.css
src/crates/cosmix-dialog-iced/: Cargo.toml
src/crates/cosmix-dialog-iced/src/: main.rs  theme.rs
src/crates/cosmix-dialog-iced/src/dialogs/: entry.rs  message.rs  mod.rs  password.rs  progress.rs  question.rs
src/crates/cosmix-dialog-layer/: Cargo.toml  build.rs
src/crates/cosmix-dialog-layer/src/: layer_shell.rs  main.rs
src/crates/cosmix-dialog/assets/: tailwind.css
src/crates/cosmix-dialog/src/: cli.rs  lib.rs  main.rs  types.rs  window.rs
src/crates/cosmix-dialog/src/backend/: blocking.rs  dioxus_backend.rs  layer_backend.rs  mod.rs
src/crates/cosmix-dialog/src/components/: mod.rs
src/crates/cosmix-dialog/src/components/alert_dialog/: style.css
src/crates/cosmix-dialog/src/layer/: ffi.rs  mod.rs  theme.rs  widgets.rs
src/crates/cosmix-dialog/src/render/: choice.rs  form.rs  input.rs  message.rs  mod.rs  progress.rs  question.rs  text_viewer.rs
src/crates/cosmix-lib-client/: Cargo.toml
src/crates/cosmix-lib-client/src/: native.rs  web.rs
src/crates/cosmix-lib-llm/: Cargo.toml
src/crates/cosmix-lib-llm/src/: lib.rs
src/crates/cosmix-lib-mesh/: Cargo.toml
(+230 files in other folders)
