[workspace]
resolver = "2"
members = ["crates/cosmix-daemon", "crates/cosmix-jmap", "crates/cosmix-mail", "crates/cosmix-markdown", "crates/cosmix-port", "crates/cosmix-calc", "crates/cosmix-view", "crates/cosmix-toot", "crates/cosmix-web", "crates/cosmix-embed", "crates/cosmix-portd"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/markc/cosmix"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols-misc = { version = "0.3", features = ["client"] }
cosmic-protocols = { version = "0.2", features = ["client"] }
zbus = "5"
mlua = { version = "0.11", features = ["luajit", "vendored", "serialize"] }
os_pipe = "1"
glob = "0.3"
libc = "0.2"
iced = { version = "0.13", features = ["tokio"] }
libcosmic = { git = "https://github.com/pop-os/libcosmic/", default-features = false, features = ["debug", "winit", "tokio", "wgpu", "wayland"] }
toml_cfg = { package = "toml", version = "0.8" }
directories = "6"
ureq = { version = "3", features = ["json"] }
meval = "0.2"
png = "0.17"
chrono = "0.4"
tokio-tungstenite = "0.26"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
axum = { version = "0.8", features = ["ws"] }
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower-sessions = "0.14"
bcrypt = "0.17"
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
comfy-table = "7"
