[package]
name = "cosmix-calc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cosmix-calc"
path = "src/main.rs"

[dependencies]
cosmix-port = { path = "../cosmix-port" }
libcosmic.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
meval = "0.2"
