[package]
name = "cosmix-configd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Config daemon — registers on hub, serves settings via AMP, watches settings.toml for changes"

[[bin]]
name = "cosmix-configd"
path = "src/main.rs"

[dependencies]
cosmix-config = { path = "../cosmix-config" }
cosmix-client = { path = "../cosmix-client" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
mimalloc.workspace = true
notify.workspace = true
