[package]
name = "cosmix-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cosmix"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wayland-client.workspace = true
wayland-protocols.workspace = true
wayland-protocols-wlr.workspace = true
cosmic-protocols.workspace = true
zbus.workspace = true
