[package]
name = "cosmix-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "cosmix_lib"
path = "src/lib.rs"

[[bin]]
name = "cosmix"
path = "src/main.rs"

[dependencies]
cosmix-port = { path = "../cosmix-port" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wayland-client.workspace = true
wayland-protocols.workspace = true
wayland-protocols-wlr.workspace = true
wayland-protocols-misc.workspace = true
cosmic-protocols.workspace = true
zbus.workspace = true
mlua.workspace = true
os_pipe.workspace = true
glob.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
iced.workspace = true
toml_cfg.workspace = true
directories.workspace = true
ureq.workspace = true
png.workspace = true
chrono.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
uuid.workspace = true
axum.workspace = true
rusqlite.workspace = true
comfy-table.workspace = true
