[package]
name = "cosmix-embed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightweight text embedding service using nomic-embed-text via candle"

[[bin]]
name = "cosmix-embed"
path = "src/main.rs"

[dependencies]
anyhow = "1"
candle-core = { git = "https://github.com/huggingface/candle" }
candle-nn = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
hf-hub = { version = "0.4", default-features = false, features = ["rustls-tls", "ureq"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
