[package]
name = "cosmix-jmap"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cosmix-jmap"
path = "src/main.rs"

[dependencies]
cosmix-port = { path = "../cosmix-port" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono = { workspace = true, features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
clap = { version = "4", features = ["derive"] }
blake3 = "1"
toml_cfg.workspace = true
tower-http.workspace = true
directories.workspace = true
smtp-proto = "0.2"
mail-parser = "0.11"
mail-builder = "0.4"
mail-auth = "0.7"
mail-send = "0.5"
hickory-resolver = { version = "0.25", features = ["tokio", "system-config"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
base64 = "0.22"
