[package]
name = "cosmix-launcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "System tray launcher for Cosmix apps and Lua scripts"

[[bin]]
name = "cosmix-launcher"
path = "src/main.rs"

[dependencies]
ksni = { version = "0.3", features = ["blocking"] }
mimalloc.workspace = true
dirs-next = "2"
