[package]
name = "cosmix-lib-amp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AMP wire format + IPC library for cosmix apps"

[lib]
name = "cosmix_amp"
path = "src/lib.rs"

[features]
default = ["native"]
native = ["dep:tokio", "dep:libc"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
