[package]
name = "cosmix-lib-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared settings library — typed config structs + TOML load/save for all cosmix apps"

[lib]
name = "cosmix_config"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml_cfg.workspace = true
directories.workspace = true
anyhow.workspace = true
