[package]
name = "cosmix-port"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Layer 3 port library for COSMIC apps — register commands, expose via Unix socket"

[features]
default = ["native"]
native = ["dep:tokio", "dep:libc"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
