[package]
name = "cosmix-portd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic Lua-defined port wrapper daemon — one binary, unlimited ARexx ports"

[[bin]]
name = "cosmix-portd"
path = "src/main.rs"

[dependencies]
cosmix-port = { path = "../cosmix-port" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
mlua.workspace = true
directories.workspace = true
glob.workspace = true
