[package]
name = "cosmix-scripts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lua + Bash script manager for Cosmix — list, run, edit, delete scripts"

[[bin]]
name = "cosmix-scripts"
path = "src/main.rs"

[dependencies]
clap.workspace = true
mimalloc.workspace = true
dirs-next = "2"
