[package]
name = "cosmix-view"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cosmix-view"
path = "src/main.rs"

[dependencies]
cosmix-port = { path = "../cosmix-port" }
libcosmic.workspace = true
image = { version = "0.25", default-features = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = "0.15"
