[package]
name = "cosmix-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DCS web interface for cosmix — Axum + askama + HTMX"

[[bin]]
name = "cosmix-web"
path = "src/main.rs"

[dependencies]
cosmix-port = { path = "../cosmix-port" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
axum.workspace = true
directories.workspace = true
toml_cfg.workspace = true

# Web-specific
askama.workspace = true
askama_axum.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
bcrypt.workspace = true
sea-orm.workspace = true
tower = "0.5"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
tokio-stream = "0.1"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
urlencoding = "2"
