[package]
name = "cosmix-dns-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Dioxus management UI for cosmix-dns (Hickory DNS)"

[[bin]]
name = "cosmix-dns-ui"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop", "dep:tao"]

[dependencies]
dioxus = { version = "0.7", features = [] }
dioxus-desktop = { version = "0.7", optional = true }
tao = { version = "0.34", default-features = false, optional = true }
hickory-server = { path = "../crates/server", features = ["toml"] }
hickory-proto = { path = "../crates/proto", features = ["text-parsing", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
