[package]
name = "hickory-util"

description = """
Utilities that complement Hickory DNS.
"""

documentation = "https://docs.rs/crate/hickory-util"
readme = "README.md"

version = "0.26.0-alpha.1"
authors = ["The contributors to Hickory DNS"]
edition = "2021"
rust-version = "1.88"
homepage = "https://hickory-dns.org/"
repository = "https://github.com/hickory-dns/hickory-dns"
keywords = ["dns", "dnssec"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"
[features]
tls-aws-lc-rs = [
    "hickory-net/tls-aws-lc-rs",
    "hickory-resolver/tls-aws-lc-rs",
    "__tls",
]
https-aws-lc-rs = [
    "hickory-net/https-aws-lc-rs",
    "hickory-resolver/https-aws-lc-rs",
    "tls-aws-lc-rs",
    "__https",
]
quic-aws-lc-rs = [
    "hickory-resolver/quic-aws-lc-rs",
    "tls-aws-lc-rs",
    "__quic",
]
h3-aws-lc-rs = [
    "hickory-resolver/h3-aws-lc-rs",
    "quic-aws-lc-rs",
    "__h3",
]

tls-ring = [
    "hickory-net/tls-ring",
    "hickory-resolver/tls-ring",
    "__tls",
]
https-ring = [
    "hickory-net/https-ring",
    "hickory-resolver/https-ring",
    "tls-ring",
    "__https",
]
quic-ring = [
    "hickory-resolver/quic-ring",
    "tls-ring",
    "__quic",
]
h3-ring = [
    "hickory-resolver/h3-ring",
    "quic-ring",
    "__h3",
]

__tls = ["dep:rustls"]
__https = []
__quic = []
__h3 = []

webpki-roots = [
    "dep:webpki-roots",
    "hickory-net/webpki-roots",
    "hickory-resolver/webpki-roots",
]
rustls-platform-verifier = [
    "hickory-net/rustls-platform-verifier",
    "hickory-resolver/rustls-platform-verifier",
]

dnssec-aws-lc-rs = ["hickory-proto/dnssec-aws-lc-rs", "hickory-resolver/dnssec-aws-lc-rs", "__dnssec"]
dnssec-ring = ["hickory-proto/dnssec-ring", "hickory-resolver/dnssec-ring", "__dnssec"]
__dnssec = []

[dependencies]
clap = { workspace = true, default-features = false, features = [
    "std",
    "cargo",
    "derive",
    "color",
    "suggestions",
    "help",
    "usage",
] }
console = "0.16"
data-encoding = { version = "2.2.0", default-features = false }
rustls = { version = "0.23.23", default-features = false, features = ["logging", "std", "tls12"], optional = true }
tracing = { version = "0.1.30", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"] }
hickory-proto = { version = "0.26.0-alpha.1", path = "../crates/proto", default-features = false, features = ["std", "text-parsing"] }
hickory-net = { version = "0.26.0-alpha.1", path = "../crates/net", default-features = false, features = ["tokio"] }
hickory-resolver = { version = "0.26.0-alpha.1", path = "../crates/resolver", default-features = false, features = ["recursor", "system-config", "tokio"] }
tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "time"] }
webpki-roots = { version = "1", optional = true }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
max_combination_size = 2
denylist = ["__tls", "__https", "__quic", "__h3", "__dnssec"]

[lints.rust]
non_snake_case = "warn"
non_upper_case_globals = "warn"
rust_2018_idioms = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(nightly)"] }
unnameable_types = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
bool_to_int_with_if = "allow"
default_trait_access = "warn"
manual_let_else = "warn"
or_fun_call = "warn"
single_component_path_imports = "allow"
unimplemented = "warn"
upper_case_acronyms = "allow"
use_self = "warn"