[package]
name = "cosmix-configd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Config daemon — registers on hub, serves settings via AMP, watches settings.toml for changes"

[[bin]]
name = "cosmix-configd"
path = "src/main.rs"

[dependencies]
cosmix_daemon = { package = "cosmix-lib-daemon", path = "../cosmix-lib-daemon" }
cosmix_config = { package = "cosmix-lib-config", path = "../cosmix-lib-config" }
cosmix_client = { package = "cosmix-lib-client", path = "../cosmix-lib-client" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
clap.workspace = true
mimalloc.workspace = true
notify.workspace = true
