[package]
name = "cosmix-dialog-layer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "POC: GTK layer-shell dialog bypassing compositor 240px minimum"

[[bin]]
name = "cosmix-dialog-layer"
path = "src/main.rs"

[build-dependencies]
pkg-config = "0.3"

[dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
gdk = "0.18"
glib = "0.18"
mimalloc.workspace = true
