[package]
name = "cosmix-dialog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GUI dialog system for cosmix — CLI, Mix-builtin, and AMP-service modes"

[lib]
name = "cosmix_dialog"
path = "src/lib.rs"

[[bin]]
name = "cosmix-dialog"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop", "dep:tao"]

[dependencies]
dioxus = { version = "0.7", features = [] }
dioxus-desktop = { version = "0.7", optional = true }
tao = { version = "0.34", default-features = false, optional = true }
cosmix_ui = { package = "cosmix-lib-ui", path = "../cosmix-lib-ui", features = ["config"] }
clap.workspace = true
mimalloc.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["time"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
