[package]
name = "cosmix-dialog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GUI dialog system for cosmix — CLI, Mix-builtin, and AMP-service modes"

[lib]
name = "cosmix_dialog"
path = "src/lib.rs"

[[bin]]
name = "cosmix-dialog"
path = "src/main.rs"

[features]
default = ["desktop", "layer-shell"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop", "dep:tao"]
layer-shell = ["dep:gtk", "dep:gdk", "dep:glib"]

[build-dependencies]
pkg-config = "0.3"

[dependencies]
dioxus = { version = "0.7", features = [] }
dioxus-desktop = { version = "0.7", optional = true }
tao = { version = "0.34", default-features = false, optional = true }
cosmix_ui = { package = "cosmix-lib-ui", path = "../cosmix-lib-ui", features = ["config"] }
clap.workspace = true
mimalloc.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["time"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

# Layer-shell backend (GTK3 native)
gtk = { version = "0.18", features = ["v3_24"], optional = true }
gdk = { version = "0.18", optional = true }
glib = { version = "0.18", optional = true }
