[package]
name = "cosmix-lib-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AMP WebSocket client for cosmix apps to connect to cosmix-hubd"

[lib]
name = "cosmix_client"
path = "src/lib.rs"

[features]
default = ["native"]
native = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "cosmix_amp/native"]

[dependencies]
cosmix_amp = { package = "cosmix-lib-amp", path = "../cosmix-lib-amp", default-features = false }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true

# Native-only
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

# WASM-only
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["websocket"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location"] }
futures-channel = "0.3"
futures-util = "0.3"
