[package]
name = "cosmix-lib-llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic multi-backend LLM client — Anthropic, OpenAI-compatible, Ollama, AMP"

[lib]
name = "cosmix_llm"
path = "src/lib.rs"

[dependencies]
cosmix_config = { package = "cosmix-lib-config", path = "../cosmix-lib-config" }
cosmix_amp = { package = "cosmix-lib-amp", path = "../cosmix-lib-amp" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
libc.workspace = true
