[package]
name = "cosmix-lib-mesh"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AMP mesh networking — WireGuard overlay + WebSocket peer sync"

[lib]
name = "cosmix_mesh"
path = "src/lib.rs"

[dependencies]
cosmix_amp = { package = "cosmix-lib-amp", path = "../cosmix-lib-amp" }
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
wireguard-control.workspace = true
toml_cfg.workspace = true
dirs-next = "2"
base64.workspace = true
